# team-bhp-riding-gear-assistant

./: .gitignore  README.md  pyproject.toml
client/: package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx
client/src/components/AnswerBox/: index.jsx
tbhp_riding_gear_assitant/: __main__.py  main.py
tbhp_riding_gear_assitant/api/: endpoints.py
tbhp_riding_gear_assitant/core/: comments_loader.py  prompts.py
tbhp_riding_gear_assitant/frontend/: index.html
tbhp_riding_gear_assitant/frontend/assets/: index-516de581.js  index-7f48b601.js  index-c532d8f1.js  index-cc0cd7d9.js
tbhp_riding_gear_assitant/utils/: functions.py
