[tool.poetry]
name = "tbhp-riding-gear-assitant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tbhp_riding_gear_assitant"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
beautifulsoup4 = "^4.12.2"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
