[tool.poetry]
name = "tbhp-riding-gear-assitant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tbhp_riding_gear_assitant"}]
include =["tbhp_riding_gear_assitant"]

[tool.poetry.scripts]
langflow = "tbhp_riding_gear_assitant.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
beautifulsoup4 = "^4.12.2"
webdriver-manager = "^3.8.6"
langchain = "^0.0.161"
chromadb = "^0.3.21"
python-decouple = "^3.8"
openai = "^0.27.6"
tiktoken = "^0.4.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
